Criando parte de Portfolio

--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
       <a href="produtos.html" class="btn btn-preto">Produtos</a>
     </div>
   </section>
+  <!-- Fecha parte de Produtos-->
+  <section class="portfolio">
+    <div class="container">
+      <h2 class="subtitulo">Portfólio</h2>
+      <ul>
+        <li class="grid-8"><img src="img/portfolio/retro.jpg" alt="Bicicletas Retro"></li>
+        <li class="grid-8"><img src="img/portfolio/passeio.jpg" alt="Bicicletas Passeio"></li>
+        <li class="grid-16"><img src="img/portfolio/esporte.jpg" alt="Bicicletas Esporte"></li>
+      </ul>
+      <div class="call">
+        <p>conheça mais o nosso portfólio </p>
+        <a href="portfolio.html" class="btn">Produtos</a>
+      </div>
+    </div>
+
+  </section>
 
 </body>
 
