--- a/contato.html
+++ b/contato.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/contato.css">
   <link rel="stylesheet" href="css/responsivo.css">
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -35,12 +36,12 @@
 
   <section class="introducao-interna interna-contato">
     <div class="container">
-      <h1>Contato</h1>
-      <p>conheça mais sobre nossos produtos</p>
+      <h1 data-anime="400" class="fadeInDown">Contato</h1>
+      <p data-anime="800" class="fadeInDown">conheça mais sobre nossos produtos</p>
     </div>
   </section>
 
-  <section class="contato container">
+  <section data-anime="1200" class="fadeInDown contato container">
     <form id="form_contato" class="contato-form grid-8">
       <label for="nome">Nome</label>
       <input type="text" id="nome">
@@ -112,6 +113,9 @@
       </div>
     </div>
   </footer>
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/simple-slide.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
