--- a/produtos.html
+++ b/produtos.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/produtos.css">
   <link rel="stylesheet" href="css/responsivo.css">
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -35,11 +36,11 @@
 
   <section class="introducao-interna interna-produtos">
     <div class="container">
-      <h1>Produtos</h1>
-      <p>conheça mais sobre nossos produtos</p>
+      <h1 data-anime="400" class="fadeInDown">Produtos</h1>
+      <p data-anime="800" class="fadeInDown">conheça mais sobre nossos produtos</p>
     </div>
   </section>
-  <section class="container produto_item">
+  <section data-anime="1200" class="fadeInDown container produto_item">
     <div class="grid-11">
       <img src="img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft Passeio">
       <h2>Passeio</h2>
@@ -163,6 +164,9 @@
       </div>
     </div>
   </footer>
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/simple-slide.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
